# soaptest

./: README.md  test.h
client/: CMakeLists.txt  main.cpp
client/soap/: ns.xsd  soapC.cpp  soaptestProxy.cpp  soaptestProxy.h  test.nsmap  test.test.req.xml
server/: CMakeLists.txt  main.cpp
server/soap/: soapC.cpp  soapH.h  soapStub.h  soaptestService.cpp  soaptestService.h  test.test.res.xml  test.wsdl
